examples/failing/semantics/conditional_race.gm
x = 0;
y = 0;
flag = 0;
$t1 = spawn {
    lock l1;
    $r = 0;
    if (flag == 0) {
        flag = 1;
        $r = 1;
    }
    unlock l1;
    if ($r == 1) {
        x = 1;
    }
};
$t2 = spawn {
    lock l1;
    $r = 0;
    if (flag == 0) {
        flag = 1;
        $r = 1;
    }
    unlock l1;
    if ($r == 1) {
        y = 1;
    } else {
        x = 1;
    }
};
join $t1;
join $t2;
assert (x != y);
